Correção de geração de seed admin, criação dos exceptions e validation do Usuario + as estruturas padrões validationError e o recorde + o handler global