@@ -5,18 +5,16 @@ import br.ufpb.dcx.dsc.paldex.model.RoleName;
 import br.ufpb.dcx.dsc.paldex.model.User;
 import br.ufpb.dcx.dsc.paldex.repository.RoleRepository;
 import br.ufpb.dcx.dsc.paldex.repository.UserRepository;
-import jakarta.annotation.PostConstruct;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
+import jakarta.annotation.PostConstruct;
+import java.util.List;
+import java.util.Optional;
 
 @Component
 public class AdminUserSeed {
-
-    private static final String ADMIN_EMAIL = "admin@admin.com";
-    private static final String ADMIN_PASSWORD = "admin123";
 
     @Autowired
     private UserRepository userRepository;
@@ -29,22 +27,26 @@ public class AdminUserSeed {
 
     @PostConstruct
     public void init() {
-        System.out.println("Initializing AdminUserSeed...");
 
-        if (userRepository.findByEmail(ADMIN_EMAIL).isEmpty()) {
+        Role adminRole = roleRepository.findByName(RoleName.ROLE_ADMIN).orElseThrow(() -> new RuntimeException("Role ADMIN not found"));
+
+        if (userRepository.findByEmail("admin@gmail.com").isEmpty()) {
             User admin = new User();
-            admin.setName("Administrator");
-            admin.setEmail(ADMIN_EMAIL);
+            admin.setEmail("admin@gmail.com");
+            admin.setName("Admin");
             admin.setUsername("admin");
-            admin.setPassword(passwordEncoder.encode(ADMIN_PASSWORD));
-
-            Role adminRole = roleRepository.findByName(RoleName.ROLE_ADMIN)
-                    .orElseThrow(() -> new RuntimeException("Role ADMIN not found"));
-
-            admin.setRoles(Collections.singletonList(adminRole));
-
+            admin.setPassword(passwordEncoder.encode("admin123"));
+            admin.setRoles(List.of(adminRole));
             userRepository.save(admin);
         }
     }
 
+    private void createRoleIfNotExists(RoleName roleName) {
+        Optional<Role> role = roleRepository.findByName(roleName);
+        if (role.isEmpty()) {
+            Role newRole = new Role();
+            newRole.setName(roleName);
+            roleRepository.save(newRole);
+        }
+    }
 }
